# Chronos

./: .gitignore  BUILD_LOG.txt  BUILD_LOG_PHASE_2_3.txt  BUILD_LOG_PHASE_4_5.txt  BUILD_LOG_PHASE_6_7.txt  BUILD_LOG_PHASE_7_RL.txt  BUILD_LOG_PHASE_8_10.txt  CMakeLists.txt  MagnusCarlsen.pgn  README.md  hub.py  make_latest_zip.py  requirements.txt  test.py
configs/: engine.yaml
cpp/: CMakeLists.txt
docs/: PROJECT_LIBRARY.md  architecture.md  phase_7_rl.md  phases_2_3.md  phases_4_5.md  phases_6_7.md  phases_8_10.md
engine/: CMakeLists.txt
engine/include/chronos/board/: attacks.h  board.h  move.h  movegen.h
engine/include/chronos/eval/: breakdown.h  eval.h
engine/include/chronos/nn/: move_index.h  nn_interface.h
engine/include/chronos/search/: search.h  tt.h
engine/include/chronos/uci/: uci.h
engine/include/chronos/util/: bitops.h  chrono_time.h  logging.h  paths.h  types.h  zobrist.h
engine/src/: main.cpp  uci.cpp
engine/src/board/: attacks.cpp  board.cpp  move.cpp  movegen.cpp
engine/src/eval/: eval.cpp
engine/src/nn/: move_index.cpp  nn_interface.cpp  onnx_runtime_impl.cpp
engine/src/search/: search.cpp  tt.cpp
engine/src/util/: chrono_time.cpp  logging.cpp  paths.cpp  zobrist.cpp
hub/: app.py  requirements.txt
nn/: README.md  move_index.py  requirements.txt
notifier/: discord.py  watch_events.py
python/: requirements.txt
rl/: encoding.py  requirements.txt  util.py
scripts/: README.md  __init__.py  run_build_dataset.ps1  run_diversity_test.py  run_labeling.ps1  run_preprocess_sl.py  run_promotion.py  run_selfplay.py  run_stockfish_eval.py  run_streamlit_local.ps1  run_streamlit_public.ps1  run_train_rl.py  run_train_sl.ps1  run_train_supervised.py
src/: __init__.py  config.py
tests/: README.md
tools/: README.md  analyze_rl_buffer.py  (+5 more)
(+94 files in other folders)
